# zumic-py

./: .coveragerc  .gitignore  .mypy.ini  CHANGELOG.md  LICENSE  Makefile  README.md  hello.py  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml  enhancement.yml  question.yml
.github/workflows/: tests.yml
tests/: test_client.py  test_connection.py  test_exceptions.py
tests/mocks/: mock_connection.py
zumic/: __init__.py  client.py  connection.py  connection_protocol.py  exceptions.py
