[project]
name = "zumic-py"
version = "0.1.0"
description = "Python client for Zumic database and key-value store"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "mickeyzzz", email = "zedmfix@gmail.com" }]
keywords = ["Zumic", "database", "key-value-store"]
dependencies = []

[tool.poetry]
packages = [{ include = "zumic" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
