[tool.poetry]
name = "zumic"
version = "0.1.0"
description = "Python client for Zumic database and key-value store"
authors = ["mickeyzzz <zedmfix@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Zumic", "database", "key-value-store"]
packages = [{ include = "zumic" }]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
mypy = "^1.9"
ruff = "^0.4"
coverage = "^7.5"
pytest-mock = "^3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
lint = "ruff check zumic"
typecheck = "mypy zumic"
